<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="app_name">WieBetaaltWat</string>
    <string name="loading">Loading</string>
    <string name="refreshed">Refreshed</string>
    <string name="cannot_refresh">Unable to refresh.</string>
    <string name="logged_out_title">Logged out</string>
    <string name="logged_out">You have been logged out. Press OK to log in again, or cancel to continue.</string>
    <string name="relogin_success">You are logged in.</string>
    <string name="relogin_failed">Login failed.</string>
    <string name="not_connected">You are currently not connected to the internet.</string>
    <string name="try_again">Please try again.</string>

    <!-- Login -->
    <string name="changeAccountButton">Change Account</string>
    <string name="shortcut">OK</string>
    <string name="usernameString">Email:</string>
    <string name="passwordString">Password:</string>
    <string name="login">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in_as">Click "OK" to log in as:</string>
    <string name="log_in_title">Login</string>
    <string name="change_account_string">If you wish to log in with a different account:</string>

    <!-- Login Interactief -->
    <string name="login_request_failed">Server request failed, please try again later.</string>
    <string name="login_data_incorrect">Log in failed, make sure your email/password combination is correct.</string>

    <!-- Menu -->
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="page">Page</string>
    <string name="results">Results per page</string>
    <string name="filter">Filter</string>

    <!-- WBWList -->
    <string name="wbw_list_name_header">List</string>
    <string name="wbw_list_my_balance_header">My balance</string>
    <string name="wbw_list_highest_balance_header">Highest balance</string>
    <string name="wbw_list_lowest_balance_header">Lowest balance</string>

    <!-- Invite -->
    <string name="invite_participant">Invite participant</string>
    <string name="invite">Invite</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="invitation">Invite a new participant!</string>
    <string name="invitation_fail">Inviting PARTICIPANT has failed.</string>
    <string name="invitation_success">PARTICIPANT is invited!</string>
    <string name="invitation_already_participant">PARTICIPANT is already a participant!</string>
    <string name="invitation_invalid">Either the name or the email has invalid input.</string>
    <string name="green_check">green check</string>
    <string name="red_cross">red cross</string>

    <!-- WBWList Interactief -->
    <string name="wbw_list_retrieve_failed">This list is not available.</string>
    <string name="wbw_list_null">The overview could not be retrieved. Please try and refresh.</string>

    <!-- ExpenseList -->
    <string name="none">none</string>
    <string name="spender">spender</string>
    <string name="participant">participant</string>
    <string name="both">both</string>

    <!-- ExpenseList Interactief -->
    <string name="show_page">Show page</string>
    <string name="expense_list_retrieved">New list retrieved!</string>
    <string name="member_list_retrieve_failed">Unable to refresh the balances of the groupmembers.</string>
    <string name="expense_list_null">The list could not be retrieved. Please try and refresh.</string>
    <string name="deletion_success">Deletion was successful!</string>
    <string name="filtered_none">All expenses are showing.</string>
    <string name="filtered_on">Only expenses are showing where NAME is FILTER1 or FILTER2</string>
    <string name="delete_expense_unknown">The website returned an unfamiliar response. Refresh the page to see if the expense is deleted. Please contact the owner of the app.</string>

    <!-- Add Expense -->
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="date">Date (dd-mm-yyyy)</string>
    <string name="payed_by">Payed by</string>
    <string name="amount">Amount</string>
    <string name="add_all">Everyone 1</string>
    <string name="clear_all">Everyone 0</string>
    <string name="groups">Groups</string>

    <!-- Add Expense interactive -->
    <string name="duplicate_data">Duplicated data</string>
    <string name="duplicate_data_question">The same data that you are about to send, have previously been send already. Do you wish to continue?</string>
    <string name="expense_add_success">Adding the expense was successful!</string>
    <string name="expense_modify_success">Modifying the expense was successful!</string>
    <string name="calc_incorrect_date">Please use the correct input for the date (dd-mm-yyyy).\n</string>
    <string name="calc_incorrect_amount">Make sure you have filled in a correct amount.\n</string>
    <string name="calc_incorrect_description">Please put something in the description field.\n</string>
    <string name="calc_incorrect_count">Make sure you have selected at least one person.\n</string>
    <string name="expense_add_unknown">The website returned an unfamiliar response. Return to the previous activity and refresh to see the result. Please contact the owner of the app.</string>
    <string name="expense_add_fail">Adding your expense failed. Try again and contact the owner of the app.</string>
    <string name="expense_modify_fail">Modifying your expense failed. Try again and contact the owner of the app.</string>

    <!-- Calculator -->
    <string name="calculator">Calculator</string>
    <string name="use">Use</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="negative_numbers_not_allowed">Note that negative numbers are not allowed.</string>

    <!-- Calculator interactive -->
    <string name="calc_verify_input">Make sure that your input is correct.</string>
    <string name="calc_input_empty">You have to fill something in before you can calculate the result.</string>
    <string name="calc_failed">Calculating this input has failed. Please contact us.</string>

    <!-- Modify member -->
    <string name="delete_member">Delete member</string>
    <string name="modify_member">Modify member</string>

    <!-- Add Group -->
    <string name="add_group">Add group..</string>
    <string name="add_group_title">Add new group</string>
    <string name="group_name">Group name</string>

</resources>