<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/invite_invitation"
        style="@style/invite_textview"
        android:text="@string/invitation" />

    <TextView
        android:id="@+id/invite_name"
        style="@style/invite_textview"
        android:text="@string/name" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/invite_editname"
            style="@style/invite_edittext"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/invite_check_name"
            android:inputType="text" />

        <ImageView
            android:id="@+id/invite_check_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/green_check"
            android:src="@drawable/red_cross"
            android:visibility="visible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/invite_email"
        style="@style/invite_textview"
        android:text="@string/email" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/invite_editemail"
            style="@style/invite_edittext"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/invite_check_email"
            android:inputType="textEmailAddress" />

        <ImageView
            android:id="@+id/invite_check_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/green_check"
            android:src="@drawable/red_cross"
            android:visibility="visible" />
    </RelativeLayout>

</LinearLayout>