<?xml version="1.0" encoding="utf-8"?>
<!-- This XML file is the layout for the WBWListActivity -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/bright_orange"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@color/bright_orange"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wbw_list_name_header"
                style="@style/my_wbw_list_header_style"
                android:text="@string/wbw_list_name_header" >
            </TextView>

            <TextView
                android:id="@+id/wbw_list_my_balance_header"
                style="@style/my_wbw_list_header_style"
                android:text="@string/wbw_list_my_balance_header" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/bright_orange"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wbw_list_highest_balance_header"
                style="@style/my_wbw_list_header_style"
                android:text="@string/wbw_list_highest_balance_header" >
            </TextView>

            <TextView
                android:id="@+id/wbw_list_lowest_balance_header"
                style="@style/my_wbw_list_header_style"
                android:text="@string/wbw_list_lowest_balance_header" >
            </TextView>
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/list_of_wbw_lists_listview"
        style="@style/my_list_style" >
    </ListView>

</LinearLayout>